chore: fix spacing for Trends feature

--- a/src/features/Trends/Trends.module.css
+++ b/src/features/Trends/Trends.module.css
@@ -2,7 +2,7 @@
 
 .card {
   @apply flex flex-col;
-  @apply rounded-lg shadow bg-white w-full mt-4;
+  @apply rounded-lg shadow bg-white w-full mt-5;
 }
 
 .header {
